-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
The simple case when file is removed with ldiskfs mount leads to situation when OI exist and points to inode, but inode is reused. For such fid osd_fid_lookup() will always return EINPROGRESS. Scrub doesnot handle this problem.
The next check compares two oi records(from inconsistent list and a fresh oi from fid) and decides that oi is fine. But unfortunately it was added to inconsistent list base on wrong inode.
} else if (osd_id_eq(lid, lid2)) {
if (converted)
sf->sf_items_updated++;
GOTO(out, rc = 0);
}